cabal-version: >=1.10
name: codex
version: 0.5.1.3
license: Apache-2.0
license-file: LICENSE
maintainer: alois.cochard@gmail.com
author: Alois Cochard
homepage: http://github.com/aloiscochard/codex
synopsis: A ctags file generator for cabal project dependencies.
description:
    This tool download and cache the source code of packages in your local hackage,
    it can then use this cache to generate `tags` files aggregating the sources of all the dependencies of your cabal/stack projects.
    .
    You basically do `codex update` in your project directory and you'll get a file
    (`codex.tags` by default, or `TAGS` when using emacs format) that you can use in your
    favorite text editor.
    .
    Usage overview can be found in the <http://github.com/aloiscochard/codex#codex README>.
category: Development
build-type: Simple

source-repository head
    type: git
    location: https://github.com/aloiscochard/codex.git

library
    exposed-modules:
        Codex
        Codex.Project
        Codex.Internal
        Distribution.Sandbox.Utils
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        ascii-progress ==0.3.*,
        base >=4.6.0.1 && <5,
        bytestring >=0.10.0.2 && <0.11,
        Cabal >=1.18 && <2.3,
        cryptohash ==0.11.*,
        containers >=0.5.0.0 && <0.6,
        directory >=1.2.0.1 && <1.4,
        filepath >=1.3.0.1 && <1.5,
        hackage-db >=1.22 && <2.1,
        http-client >=0.4 && <0.6,
        lens >=4.6 && <5,
        machines >=0.2 && <0.7,
        machines-directory >=0.0.0.2 && <0.3,
        process >=1.2.3 && <1.7,
        tar >=0.4.0.1 && <0.6,
        text >=1.1.1.3 && <1.3,
        transformers >=0.3.0.0 && <0.6,
        yaml >=0.8.8.3 && <0.9,
        wreq >=0.3.0.1 && <0.6,
        zlib >=0.5.4.1 && <0.7

executable codex
    main-is: Main.hs
    hs-source-dirs: codex
    other-modules:
        Main.Config
        Main.Config.Codex0
        Main.Config.Codex1
        Main.Config.Codex2
        Main.Config.Codex3
        Paths_codex
    default-language: Haskell2010
    ghc-options: -threaded -Wall
    build-depends:
        ascii-progress <0.4,
        base <4.12,
        Cabal <2.3,
        bytestring <0.11,
        directory <1.4,
        filepath <1.5,
        hackage-db <2.1,
        MissingH >=1.2.1.0 && <1.5,
        monad-loops >=0.4.2 && <0.5,
        network ==2.6.*,
        process <1.7,
        transformers <0.6,
        wreq <0.6,
        yaml <0.9,
        codex -any
