name:                codex
version:             0.5.2.0
synopsis:            A ctags file generator for cabal project dependencies.
description:
  This tool download and cache the source code of packages in your local hackage,
  it can then use this cache to generate `tags` files aggregating the sources of all the dependencies of your cabal/stack projects.
  .
  You basically do `codex update` in your project directory and you'll get a file
  (`codex.tags` by default, or `TAGS` when using emacs format) that you can use in your
  favorite text editor.
  .
  Usage overview can be found in the <http://github.com/aloiscochard/codex#codex README>.

homepage:            http://github.com/aloiscochard/codex
license:             Apache-2.0
license-file:        LICENSE
author:              Alois Cochard
maintainer:          alois.cochard@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  ghc-options:       -Wall
  exposed-modules:
    Codex
    Codex.Project
    Codex.Internal
    Distribution.Sandbox.Utils
  build-depends:
      ascii-progress      >= 0.3
    , base                >= 4.8.2.0    && < 5
    , bytestring          >= 0.10.0.2   && < 0.11
    , Cabal               >= 1.18       && < 2.5
    , containers          >= 0.5.0.0    && < 0.7
    , cryptonite          >= 0.21       && < 0.26
    , directory           >= 1.2.5.0    && < 1.4
    , filepath            >= 1.3.0.1    && < 1.5
    , hackage-db          >= 1.22       && < 3
    , http-client         >= 0.4        && <= 0.6.4
    , lens                >= 4.6        && < 5
    , machines            >= 0.2        && < 0.7
    , machines-directory  >= 0.0.0.2    && < 0.3
    , memory              >= 0.13       && < 0.15
    , process             >= 1.2.3      && < 1.7
    , tar                 >= 0.4.0.1    && < 0.6
    , text                >= 1.1.1.3    && < 1.3
    , transformers        >= 0.3.0.0    && < 0.6
    , yaml                >= 0.8.8.3    && < 0.12
    , wreq                >= 0.3.0.1    && < 0.6
    , zlib                >= 0.5.4.1    && < 0.7

executable codex
  default-language:  Haskell2010
  hs-source-dirs:    codex
  main-is:           Main.hs
  ghc-options:       -threaded -Wall
  other-modules:
    Main.Config
    Main.Config.Codex0
    Main.Config.Codex1
    Main.Config.Codex2
    Main.Config.Codex3
    Paths_codex
  build-depends:
      ascii-progress
    , base
    , Cabal
    , directory
    , filepath
    , hackage-db
    , network             >= 2.6        && < 2.9
    , process
    , transformers
    , wreq
    , yaml
    , codex

source-repository head
  type:     git
  location: https://github.com/aloiscochard/codex.git
