name:                codex
version:             0.6.0.0
synopsis:            A ctags file generator for cabal project dependencies.
description:
  This tool download and cache the source code of packages in your local hackage,
  it can then use this cache to generate `tags` files aggregating the sources of all the dependencies of your cabal/stack projects.
  .
  You basically do `codex update` in your project directory and you'll get a file
  (`codex.tags` by default, or `TAGS` when using emacs format) that you can use in your
  favorite text editor.
  .
  Usage overview can be found in the <http://github.com/aloiscochard/codex#codex README>.

homepage:            http://github.com/aloiscochard/codex
license:             Apache-2.0
license-file:        LICENSE
author:              Alois Cochard
maintainer:          alois.cochard@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  ghc-options:       -Wall
  exposed-modules:
    Codex
    Codex.Project
    Codex.Internal
    Distribution.Sandbox.Utils
  build-depends:
      ascii-progress      >= 0.3
    , base                >= 4.11       && < 5
    , bytestring          >= 0.10.0.2   && < 0.11
    , conduit             >= 1.3.0
    , Cabal               >= 3.0        && < 3.1
    , containers          >= 0.5.0.0    && < 0.7
    , cryptonite          >= 0.21       && < 0.27
    , directory           >= 1.2.5.0    && < 1.4
    , filepath            >= 1.3.0.1    && < 1.5
    , hackage-db          >= 2          && < 3
    , http-client         >= 0.4        && <= 0.6.5
    , memory              >= 0.13       && < 0.16
    , process             >= 1.2.3      && < 1.7
    , tar                 >= 0.4.0.1    && < 0.6
    , text                >= 1.1.1.3    && < 1.3
    , transformers        >= 0.3.0.0    && < 0.6
    , yaml                >= 0.8.8.3    && < 0.12
    , zlib                >= 0.5.4.1    && < 0.7

executable codex
  default-language:  Haskell2010
  hs-source-dirs:    codex
  main-is:           Main.hs
  ghc-options:       -threaded -Wall
  other-modules:
    Main.Config
    Main.Config.Codex0
    Main.Config.Codex1
    Main.Config.Codex2
    Main.Config.Codex3
    Paths_codex
  build-depends:
      ascii-progress
    , base
    , Cabal
    , directory
    , filepath
    , hackage-db
    , network             >= 2.6        && < 3.2
    , http-client-tls     
    , process
    , transformers
    , yaml
    , codex

source-repository head
  type:     git
  location: https://github.com/aloiscochard/codex.git
